--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe width="1900" height="315" src="https://www.youtube.com/embed/gvyiwqA7raU" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/gvyiwqA7raU" frameborder="0" allowfullscreen></iframe>
