--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<iframe width="100%" height="33%" src="https://www.youtube.com/embed/gvyiwqA7raU" frameborder="0" allowfullscreen></iframe>
-<iframe width="100%" height="33%" src="https://www.youtube.com/embed/KF47Za1lfjM" frameborder="0" allowfullscreen></iframe>
-<iframe width="100%" height="33%" src="https://www.youtube.com/embed/qOyQiNZW-kI" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="33%" src="https://www.youtube.com/embed/gvyiwqA7raU"  AUTOSTART=TRUE frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="33%" src="https://www.youtube.com/embed/KF47Za1lfjM"  AUTOSTART=TRUE frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="33%" src="https://www.youtube.com/embed/qOyQiNZW-kI"  AUTOSTART=TRUE frameborder="0" allowfullscreen></iframe>
